<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/image_view_border"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/courseImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="3pt"
            android:layout_marginStart="3pt"
            android:layout_marginBottom="3pt"
            android:background="@drawable/image_view_border"
            android:padding="2.95pt"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/courseImageViewHint" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/courseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="9dp"
                android:text="@string/courseNameTextHint"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/courseLecturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/courseLecturerHint"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/courseGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/courseGradeHint"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>